# Leopard

./: README.md  byte_code_specification_stack
LeopardVM/LeopardVM/: .fuse_hidden0000004500000001  .fuse_hidden000003e400000002  .fuse_hidden000003e700000003  .fuse_hidden000003ed00000005  .fuse_hidden000003f500000007  .fuse_hidden000003f800000008  .fuse_hidden000003fe0000000a  .fuse_hidden000004090000000b  .fuse_hidden0000055900000002  .fuse_hidden0000055c00000003  .fuse_hidden0000086e0000000c  .fuse_hidden0000087c0000000e  .fuse_hidden0000087f0000000f  .fuse_hidden0000088a00000010  .fuse_hidden000008cc0000001c  .fuse_hidden00000d3b00000001  .fuse_hidden00000e7800000002  .fuse_hidden00000ea700000003  .fuse_hidden0000236e00000001  .fuse_hidden0000237200000002  .fuse_hidden0000237500000004  LeopardVM.cppproj  Makefile.am  Makefile.in  configure  configure.ac
LeopardVM/LeopardVM/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
LeopardVM/LeopardVM/src/: allocatedObject.h  basic_block.h  classinfo.cpp  classinfo.h  gc.cpp  gc.h  heapallocator.cpp  helper_functions.cpp  helper_functions.h  jit.cpp  jit.h  main.cpp  main.h  main.h~  stack.cpp  vm.cpp  vm.h
LeopardVM/LeopardVM/src/.deps/: LeopardVM-classinfo.Po  LeopardVM-gc.Po  LeopardVM-heapallocator.Po  LeopardVM-helper_functions.Po  LeopardVM-info.Po  LeopardVM-jit.Po  LeopardVM-main.Po  LeopardVM-memberinfo.Po  LeopardVM-methodinfo.Po  LeopardVM-stack.Po  LeopardVM-vm.Po
VM/: .project
VMCompiler/: Compiler.userprefs  Makefile  Makefile.am  Makefile.in  VMCompiler.sln  VMCompiler.userprefs  (+8 more)
(+51 files in other folders)
